--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,70 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>プライバシーポリシー | 合同会社WaJu</title>
 
-  <!-- Favicon / PWA -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png?v=1">
-  <link rel="manifest" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/site.webmanifest?v=1">
-  <meta name="theme-color" content="#0f172a">
+  <!-- SEO / OGP -->
+  <meta name="description" content="合同会社WaJuのプライバシーポリシーを掲載しています。">
+  <meta property="og:title" content="プライバシーポリシー | 合同会社WaJu">
+  <meta property="og:description" content="合同会社WaJuのプライバシーポリシーを掲載しています。">
+  <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://waju.co.jp/privacy.html">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png">
+
+  <!-- TailwindCSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZHLJ5K19ZE');
+  </script>
+
+  <!-- プライバシーポリシー専用CSS -->
   <style>
-    /* ========== index_part1.txt から復元したヘッダー/フッター共通のCSS ========== */
-    :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}
-    *{box-sizing:border-box}
-    /* bodyのline-heightをindex_part1.txtに合わせて1.7に設定 */
-    body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff;line-height:1.7}
-    a{color:inherit;text-decoration:none}
-    main{min-height:40vh}
-    .container{max-width:var(--container);margin:0 auto;padding:0 16px}
-    .hf-wrap{width:100%}
-    .hfbar{display:flex;align-items:center;gap:var(--gap);width:100%;padding:8px 0}
-    .hfbar.hf-row{justify-content:flex-start}
-    .hfbar.hf-column{flex-direction:column;align-items:stretch}
-    .hf-brand{display:flex;align-items:center;gap:8px}
-    .hf-nav{display:flex;gap:var(--gap);flex-wrap:wrap;width:100%}
-    .slot{display:flex;align-items:center}
-    .slot.brand{flex:0 0 auto}
-    .slot.nav{flex:1 1 auto}
-    .hf-copy{display:flex;width:100%}
-    .hamburger{display:none;appearance:none;border:1px solid #111;background:#fff;color:#111;cursor:pointer;padding:8px;border-radius:10px;box-shadow:0 1px 2px rgba(0,0,0,.12)}
-    .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}
-    .drawer{position:fixed;inset:0;pointer-events:none}
-    .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}
-    .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}
-    .drawer[aria-hidden="false"]{pointer-events:auto}
-    .drawer[aria-hidden="false"] .overlay{opacity:1}
-    .drawer[aria-hidden="false"] .panel{transform:none}
-    .drawer .panel header{padding:14px 16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
-    .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}
-    .drawer .panel nav a{padding:12px 10px;border-radius:10px}
-    .drawer .panel nav a:hover{background:#f1f5f9}
-    @media (max-width:768px){
-      .container{padding:0 12px}
-      :root{--container:100%}
-      .slot.nav{display:none}
-      .hamburger{display:block;margin-left:auto}
-      #site-footer .hf-nav{display:none !important}
-    }
-    
-    /* ========== プライバシーポリシー本文のおしゃれCSS (維持) ========== */
-    #page-content .container {
+    #page-content {
       max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
     }
-
     .privacy-content {
       line-height: 1.8;
       color: #333;
       font-size: 16px;
     }
-
-    /* メインタイトル */
     .privacy-content h1 {
       margin: 0 0 40px;
       padding-bottom: 10px;
@@ -74,8 +51,6 @@
       color: #0f172a;
       border-bottom: 2px solid #e0e0e0;
     }
-
-    /* 各セクションの見出し */
     .privacy-content h2 {
       margin: 40px 0 16px;
       font-size: 1.5rem;
@@ -84,14 +59,10 @@
       padding-bottom: 5px;
       border-bottom: 1px dashed #bbdefb;
     }
-
-    /* パラグラフ */
     .privacy-content p {
       margin: 0 0 24px;
       text-align: justify;
     }
-
-    /* リスト */
     .privacy-content ul {
       margin: 0 0 24px 20px;
       padding-left: 0;
@@ -110,9 +81,7 @@
       top: 0;
       font-weight: bold;
     }
-
-    /* 署名部分 */
-    .signature{
+    .signature {
       margin-top: 50px;
       padding-top: 15px;
       text-align: right;
@@ -121,26 +90,17 @@
       color: #555;
       border-top: 1px solid #e0e0e0;
     }
-
-    /* モバイル向け調整 */
     @media (max-width: 768px) {
-      .privacy-content h1 {
-        font-size: 2rem;
-        margin-bottom: 30px;
-      }
-      .privacy-content h2 {
-        font-size: 1.3rem;
-        margin-top: 30px;
-      }
+      .privacy-content h1 { font-size: 2rem; margin-bottom: 30px; }
+      .privacy-content h2 { font-size: 1.3rem; margin-top: 30px; }
     }
   </style>
 </head>
-<body>
-  <!-- Header (index_part1.txtから復元) -->
-  <header id="site-header" class="hf-wrap"></header>
+<body id="page-body">
+  <header id="site-header"></header>
 
-  <main id="page-content" aria-live="polite">
-    <div class="container">
+  <main id="page-main">
+    <div id="page-content">
       <div class="privacy-content">
         <h1>プライバシーポリシー</h1>
 
@@ -168,172 +128,29 @@
         <h2>法令の遵守と見直し</h2>
         <p>当社は、適用される日本の法令や規範を遵守するとともに、本ポリシーを適宜見直し、改善に努めます。</p>
 
-        <div class="signature">
-          合同会社WaJu
-        </div>
+        <div class="signature">合同会社WaJu</div>
       </div>
     </div>
   </main>
 
-  <!-- Footer (index_part3.txtから復元) -->
-  <footer id="site-footer" class="hf-wrap"></footer>
+  <footer id="site-footer"></footer>
 
-  <!-- Mobile drawer (index_part3.txtから復元) -->
-  <div id="mobile-drawer" class="drawer" aria-hidden="true">
-    <div class="overlay" data-close></div>
-    <div class="panel" role="dialog" aria-modal="true" aria-labelledby="drawer-title">
-      <header>
-        <div class="title" id="drawer-title">メニュー</div>
-        <button class="hamburger" id="drawer-close" aria-label="閉じる">
-          <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-        </button>
-      </header>
-      <nav id="drawer-nav" aria-label="モバイルメニュー"></nav>
-    </div>
-  </div>
+  <!-- ヘッダー／フッター反映 -->
+  <script type="module" src="hf.js"></script>
 
-  <!-- Supabase / Header-Footer Loader (index_part3.txtから復元) -->
-  <script type="module">
-    const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
-    const sb = createClient(
-      "https://htnmjsqgoapvuanrsuma.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-    );
-
-    const $ = s => document.querySelector(s);
-    const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
-    const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
-    // index_part3.txtに合わせて正規表現を修正
-    const withFallback = s => !s ? "" : (/\b(sans-serif|serif|monospace)\b/i.test(s) ? s : `${s}, sans-serif`);
-    const stripQuotes = s => s ? s.replace(/^['"]+|['"]+$/g,'') : '';
-    const bgParts = (row, def) => {
-      const grad = stripQuotes(row?.bg_gradient||"").trim();
-      if (grad){ return {bgColor:def, bgImage:grad}; }
-      const col = (row?.bg_color && row.bg_color.trim()) ? row.bg_color : def;
-      return {bgColor:col, bgImage:"none"};
-    };
-    const brandJustifyMargins = (align)=> align==='left'?'margin-right:auto':(align==='center'?'margin:0 auto':'margin-left:auto');
-
-    let allMenus = [];
-
-    async function loadHF(){
-      const [{data:menus},{data:hdr},{data:ftr}] = await Promise.all([
-        sb.from("public_menus").select("*").order("sort_order",{ascending:true}),
-        sb.from("hf_settings").select("*").eq("area","header").single(),
-        sb.from("hf_settings").select("*").eq("area","footer").single()
-      ]);
-      allMenus = menus||[];
-
-      // ヘッダー処理 (index_part3.txt)
-      renderHeader(hdr||{}, allMenus);
-
-      // フッター処理 (index_part3.txt)
-      renderFooter(ftr||{}, allMenus);
-
-      buildDrawer(allMenus);
-      adjustOffsets(hdr||{}, ftr||{}); // index_part3.txtのオリジナルの引数を使用
-      addResizeObserver(hdr||{}, ftr||{}); // index_part3.txtのオリジナルの引数を使用
-    }
-
-    function linkOf(m){ return (m.url ?? m.href ?? '#'); }
-
-    // =========================
-    // ヘッダー処理 (index_part3.txtのロジックに復元)
-    // =========================
-    function renderHeader(d, menus){
-      const items = (menus||[]).filter(m=>m.is_active && m.show_in_header)
-        .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-      const {bgColor,bgImage} = bgParts(d, "#0f172a");
-      const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
-      const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
-      const paddingY = d.padding || "8px 0"; // index_part3.txtのpadding
-      const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
-      $("#site-header").innerHTML = `
-        <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand};">
-          <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
-              <div class="slot brand" style="${brandJustifyMargins(d.company_alignment)}">
-                <div class="hf-brand">
-                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" style="max-height:${num(d.logo_height||60,60)}px">`:""}
-                  <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
-                </div>
-              </div>
-              <div class="slot nav">
-                <nav class="hf-nav" id="desktop-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
-              </div>
-              <button id="hamburger" class="hamburger" aria-controls="mobile-drawer" aria-expanded="false" aria-label="メニューを開く">
-                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-              </button>
-            </div>
-          </div>
-        </div>`;
-      const bg = $("#hf-header-bg");
-      if(d.header_fixed && bg){
-        Object.assign(bg.style,{position:"fixed",top:"0",left:"0",right:"0",zIndex:"1000",width:"100%"});
-      }
-      $("#hamburger")?.addEventListener("click",()=>{const open=$("#mobile-drawer").getAttribute("aria-hidden")==="false";open?closeDrawer():openDrawer();});
-    }
-
-    // =========================
-    // フッター処理 (index_part3.txtのロジックに復元)
-    // =========================
-    function renderFooter(d, menus){
-      const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer)
-        .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-      const {bgColor,bgImage} = bgParts(d, "#0f172a");
-      const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
-      const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
-      const paddingY = d.padding || "8px 0"; // index_part3.txtのpadding
-      const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
-      // index_part3.txtのinnerロジックに復元 (nav-top分岐あり)
-      const inner = d.layout_mode==="nav-top"
-        ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
-           <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
-        : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
-           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`;
-
-      $("#site-footer").innerHTML = `
-        <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand};">
-          <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
-              ${inner}
-            </div>
-          </div>
-        </div>`;
-      const bg = $("#hf-footer-bg");
-      if(d.footer_fixed && bg){
-        Object.assign(bg.style,{position:"fixed",bottom:"0",left:"0",right:"0",zIndex:"1000",width:"100%"});
+  <!-- フッター高さに応じて余白を自動調整 -->
+  <script>
+    function adjustFooterPadding() {
+      const footer = document.getElementById("site-footer");
+      const main = document.querySelector("main");
+      if (document.body.classList.contains("footer-fixed") && footer && main) {
+        main.style.paddingBottom = footer.offsetHeight + "px";
+      } else if (main) {
+        main.style.paddingBottom = "0";
       }
     }
-
-    // ドロワー/開閉関数 (index_part3.txtのロジックに復元)
-    function buildDrawer(menus){
-      const items = menus.filter(m=>m.is_active).map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-      $("#drawer-nav").innerHTML = items;
-    }
-    function openDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","false");$("#hamburger").setAttribute("aria-expanded","true");}
-    function closeDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","true");$("#hamburger").setAttribute("aria-expanded","false");}
-    $("#drawer-close")?.addEventListener("click", closeDrawer);
-    $("#mobile-drawer .overlay")?.addEventListener("click", closeDrawer);
-
-    // オフセット調整ロジック (index_part3.txtのロジックに復元)
-    function adjustOffsets(h,f){
-      const headerEl=$("#hf-header-bg");
-      const body=document.body;
-      // index_part3.txtのpaddingTopロジックに復元
-      body.style.paddingTop=headerEl?`${headerEl.offsetHeight}px`:"0";
-      // index_part3.txtのpaddingBottomロジックに復元（フッター固定がないためここでは"0"）
-      // フッター固定がある場合はfooterEl.offsetHeightを使用するロジックはaddResizeObserver側で対応しているはず
-      body.style.paddingBottom="0";
-    }
-
-    function addResizeObserver(h,f){
-      const ro=new ResizeObserver(()=>adjustOffsets(h,f));
-      const headerEl=$("#hf-header-bg");const footerEl=$("#hf-footer-bg");
-      if(headerEl) ro.observe(headerEl); if(footerEl) ro.observe(footerEl);
-    }
-
-    loadHF();
+    window.addEventListener("load", adjustFooterPadding);
+    window.addEventListener("resize", adjustFooterPadding);
   </script>
 </body>
 </html>
