--- a/test.html
+++ b/test.html
@@ -30,75 +30,59 @@
     gtag('config', 'G-ZHLJ5K19ZE');
   </script>
 
+  <!-- ページ専用CSS（main内にスコープ） -->
   <style>
-    main {
-      padding: 2em;
+    main#about-main {
       min-height: 60vh;
+      padding: 2em 0;
     }
-    #page-content .container {
+    #about-main .container {
       max-width: 1000px;
       margin: 0 auto;
       padding: 0 20px;
     }
-    h1#page-title {
+    #about-main h1 {
       font-size: 42px;
       text-align: center;
-      margin: 40px 0 60px;
+      margin: 40px 0;
       font-weight: 900;
       color: #1976d2;
-      letter-spacing: 2px;
-      position: relative;
     }
-    h1#page-title::after {
-      content: '';
-      display: block;
-      width: 60px;
-      height: 3px;
-      background: #0f172a;
-      margin: 10px auto 0;
-      border-radius: 2px;
-    }
-    .section-title {
-      font-size: 28px;
-      font-weight: 800;
+    #about-main h2 {
+      font-size: 24px;
+      font-weight: 700;
+      margin: 30px 0 10px;
       color: #0f172a;
       text-align: center;
-      margin: 40px 0 10px;
     }
-    .section-subtitle {
-      font-size: 18px;
-      font-weight: 500;
-      color: #1976d2;
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .profile-table {
-      width: 100%;
-      max-width: 800px;
-      margin: 40px auto;
-      border-collapse: collapse;
-      box-shadow: 0 5px 15px rgba(0,0,0,.05);
+    #about-main .card {
+      background: #fff;
       border-radius: 8px;
-      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 20px;
+      margin-bottom: 40px;
     }
-    .profile-table th, .profile-table td {
-      padding: 16px 20px;
+    #about-main .card img {
+      max-width: 100%;
+      border-radius: 6px;
+      display: block;
+      margin: 0 auto 20px;
+    }
+    #about-main .profile-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px auto;
+    }
+    #about-main .profile-table th,
+    #about-main .profile-table td {
+      border: 1px solid #ddd;
+      padding: 12px 16px;
       text-align: left;
-      border-bottom: 1px solid #e5e7eb;
     }
-    .profile-table th {
-      width: 30%;
-      background-color: #f1f5f9;
+    #about-main .profile-table th {
+      background: #f5f5f5;
       font-weight: 600;
-      color: #374151;
-    }
-    .profile-table td {
-      background-color: #fff;
-      color: #0f172a;
-    }
-    .profile-table tr:last-child th, 
-    .profile-table tr:last-child td {
-      border-bottom: none;
+      width: 30%;
     }
   </style>
 </head>
@@ -107,37 +91,37 @@
   <header id="site-header"></header>
 
   <!-- メイン -->
-  <main>
-    <div id="page-content">
-      <div class="container">
-        <h1 id="page-title">会社概要</h1>
+  <main id="about-main">
+    <div class="container">
 
-        <!-- 理念 -->
-        <section id="philosophy">
-          <div class="section-title">Philosophy</div>
-          <div class="section-subtitle">理念</div>
-          <p class="mb-6">合同会社WaJuは、「できない」「わからない」を支援する会社です。</p>
-          <p class="mb-6">「あんなことができたらいいな」「こんなものがあったら便利だな」という声を形にし、個人や企業の挑戦を後押しすることを目的に設立されました。</p>
-          <p class="mb-6">社会福祉の一環として介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い分野で社会的支援ができる企業を目指しています。</p>
-          <p class="mb-6">「できない・わからない」と足踏みしている方々に対して、一緒に考え、一緒に問題解決をし、未来へと繋がる社会的意義のある事業を展開していきます。</p>
-          <p class="font-bold text-blue-600">常に前進する <strong>Walk</strong>、大きく躍進する <strong>Jump</strong> を心掛け、人と人をつなぐことで社会に貢献します。</p>
-        </section>
+      <h1>会社概要</h1>
 
-        <!-- 代表メッセージ -->
-        <section id="message">
-          <div class="section-title">Message</div>
-          <div class="section-subtitle">代表メッセージ</div>
+      <!-- PHILOSOPHY -->
+      <section id="philosophy">
+        <h2>PHILOSOPHY<br><small>理念</small></h2>
+        <div class="card">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/about-philosophy.jpg" alt="理念イメージ">
+          <p>合同会社WaJuは、「できない」「わからない」を支援する会社です。</p>
+          <p>「あんなことができたらいいな」「こんなものがあったら便利だな」という声を形にし、個人や企業の挑戦を後押しすることを目的に設立されました。</p>
+          <p>社会福祉の一環として介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い分野で社会的支援ができる企業を目指しています。</p>
+        </div>
+      </section>
+
+      <!-- MESSAGE -->
+      <section id="message">
+        <h2>MESSAGE<br><small>代表メッセージ</small></h2>
+        <div class="card">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/about-ceo.jpg" alt="代表写真">
           <p>私はこれまで15年以上にわたり、特別養護老人ホームや有料老人ホームで介護士として勤務し、サービス付き高齢者住宅の立ち上げ、サービス提供責任者、施設長といった役職も経験してきました。その中で常に直面したのは、慢性的な人手不足や賃金が上がらない厳しい現実でした。</p>
           <p>事業所の倒産は増え続け、採用しても定着せず、採用コストばかりが膨らんでいく。退職の多くは賃金や業務内容ではなく人間関係が原因で、現場と運営の意識の溝が大きな課題となっていました。</p>
-          <p>現場では「上はわかってくれない」という声が多く聞かれる一方で、運営側も多忙で現場のフォローに十分に時間を割けない状況があります。記録ソフトや見守りサービスなど現場を支援するツールは数多くあっても、管理者や相談員、ケアマネを支える仕組みは少なく、さらに業種横断的に全事業所が共通で使えるものはほとんどありません。</p>
-          <p>だからこそ、私は「運営を支援するシステム」を作ることが業界改善に直結すると考え、独立してCARELAYを開発しました。CARELAYを通じて全国の高齢者介護サービス事業所や障害福祉事業所、関係機関をつなぎ、業務効率化とコスト削減を実現することで、現場をフォローできる運営体制を整え、利用者により良いサービスを届ける循環を目指しています。</p>
-          <p>そして介護・福祉業界にとどまらず、今後は他の業界にも同様の仕組みを広げていきたい。作って終わりではなく、常にユーザーの声を聞きながら改善し、求められるサービスを提供し続けることを約束します。</p>
-        </section>
+          <p>だからこそ、私は「運営を支援するシステム」を作ることが業界改善に直結すると考え、独立してCARELAYを開発しました。</p>
+        </div>
+      </section>
 
-        <!-- 会社情報 -->
-        <section id="company-profile">
-          <div class="section-title">Company Profile</div>
-          <div class="section-subtitle">会社情報</div>
+      <!-- COMPANY PROFILE -->
+      <section id="company-profile">
+        <h2>COMPANY PROFILE<br><small>会社情報</small></h2>
+        <div class="card">
           <table class="profile-table">
             <tbody>
               <tr><th>法人名</th><td>合同会社WaJu</td></tr>
@@ -147,8 +131,9 @@
               <tr><th>事業内容</th><td>介護福祉業界のオンラインプラットフォーム「CARELAY」の製作および販売</td></tr>
             </tbody>
           </table>
-        </section>
-      </div>
+        </div>
+      </section>
+
     </div>
   </main>
 
