--- a/test.html
+++ b/test.html
@@ -30,32 +30,32 @@
     gtag('config', 'G-ZHLJ5K19ZE');
   </script>
 
-  <!-- about専用CSS（main内にスコープ） -->
+  <!-- about専用CSS（#page-main にスコープ） -->
   <style>
-    main#about-main {
+    #page-main {
       min-height: 60vh;
       padding: 2em 0;
     }
-    #about-main .container {
+    #page-main .container {
       max-width: 1100px;
       margin: 0 auto;
       padding: 0 20px;
     }
-    #about-main h1 {
+    #page-main h1 {
       font-size: 42px;
       text-align: center;
       margin: 40px 0 60px;
       font-weight: 900;
       color: #1976d2;
     }
-    #about-main h2 {
+    #page-main h2 {
       font-size: 28px;
       font-weight: 700;
       margin: 40px 0 20px;
       color: #0f172a;
       text-align: center;
     }
-    #about-main .flex-box {
+    #page-main .flex-box {
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
@@ -63,28 +63,28 @@
       justify-content: center;
       margin-bottom: 40px;
     }
-    #about-main .flex-box img {
+    #page-main .flex-box img {
       max-width: 400px;
       border-radius: 8px;
     }
-    #about-main .flex-box .text {
+    #page-main .flex-box .text {
       flex: 1;
       min-width: 280px;
     }
-    #about-main table.profile-table {
+    #page-main table.profile-table {
       width: 100%;
       max-width: 900px;
       margin: 0 auto 60px;
       border-collapse: collapse;
       border: 1px solid #ddd;
     }
-    #about-main table.profile-table th,
-    #about-main table.profile-table td {
+    #page-main table.profile-table th,
+    #page-main table.profile-table td {
       padding: 14px 18px;
       border: 1px solid #ddd;
       text-align: left;
     }
-    #about-main table.profile-table th {
+    #page-main table.profile-table th {
       width: 30%;
       background: #f7f7f7;
       font-weight: 600;
@@ -96,7 +96,7 @@
   <header id="site-header"></header>
 
   <!-- メイン -->
-  <main id="about-main">
+  <main id="page-main">
     <div class="container">
       <h1>会社概要</h1>
 
@@ -104,7 +104,7 @@
       <section id="philosophy">
         <h2>PHILOSOPHY<br><small>理念</small></h2>
         <div class="flex-box">
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/about-philosophy.jpg" alt="理念イメージ">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0004.png" alt="WaJu 理念イメージ：挑戦と支援の光" class="philosophy-image">
           <div class="text">
             <p>合同会社WaJuは、「できない」「わからない」を支援する会社です。</p>
             <p>「あんなことができたらいいな」「こんなものがあったら便利だな」という声を形にし、個人や企業の挑戦を後押しすることを目的に設立されました。</p>
@@ -117,7 +117,7 @@
       <section id="message">
         <h2>MESSAGE<br><small>代表メッセージ</small></h2>
         <div class="flex-box">
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/about-ceo.jpg" alt="代表写真">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0007.png" alt="代表社員 大野 洋">
           <div class="text">
             <p>私はこれまで15年以上にわたり、特別養護老人ホームや有料老人ホームで介護士として勤務し、サービス付き高齢者住宅の立ち上げ、サービス提供責任者、施設長といった役職も経験してきました。その中で常に直面したのは、慢性的な人手不足や賃金が上がらない厳しい現実でした。</p>
             <p>だからこそ、私は「運営を支援するシステム」を作ることが業界改善に直結すると考え、独立してCARELAYを開発しました。</p>
