--- a/test.html
+++ b/test.html
@@ -92,19 +92,15 @@
   
   <template id="about-shadow-template">
     <style>
-      /* about.txt に記述されていたスタイル定義を全てここにコピーします。 */
-      /* これにより、スタイルが Shadow DOM 内部にカプセル化され、 */
-      /* base.txt のグローバルなヘッダー/フッターのCSSと干渉しません。 */
+      /* ========== about.txt に記述されていたスタイル定義 ========== */
       
-      /* ========== 既存のCSS (about.txtより) ========== */
-      /* ※ base.txt には既に類似の共通CSSがある可能性がありますが、 */
-      /* ページ固有のスタイルを確実に適用するため、about.txt のCSSをそのまま移植します。 */
+      /* 共通・基盤スタイル */
       :root{--container:1120px;
         --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}
       *{box-sizing:border-box}
       body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff;line-height:1.7}
       a{color:inherit;text-decoration:none}
-      main{min-height:40vh;} /* フッターとの間隔を調整 */
+      main{min-height:40vh;} 
       .container{max-width:var(--container);margin:0 auto;padding:0 16px}
       .hf-wrap{width:100%}
       .hfbar{display:flex;align-items:center;gap:var(--gap);width:100%;padding:8px 0}
@@ -136,7 +132,7 @@
         #site-footer .hf-nav{display:none !important}
       }
 
-      /* ページ共通スタイル (about.txtより) */
+      /* ページ共通スタイル */
       section{margin:60px auto}
       h1,h2,h3{margin:0 0 20px;font-weight:700}
       h1{font-size:36px;text-align:center}
@@ -145,7 +141,7 @@
       p{margin:0 0 14px}
       .lead{font-size:20px;text-align:center;margin-bottom:30px;color:#374151}
 
-      /* about.html 専用カスタムスタイル (about.txtより) */
+      /* about.html 専用カスタムスタイル */
       #page-title {
           font-size: 42px;
           text-align: center;
@@ -184,6 +180,11 @@
 
       /* Philosophy Section */
       #philosophy .content-card {
+          /* ★修正: PCでの最大幅を固定し、中央寄せにする */
+          max-width: 860px; 
+          margin-left: auto;
+          margin-right: auto;
+
           background: linear-gradient(135deg, #e0f2fe 0%, #fff 100%);
           padding: 40px;
           border-radius: 16px;
@@ -247,6 +248,11 @@
           padding: 80px 0;
       }
       #message .message-wrapper {
+          /* ★修正: PCでの最大幅を固定し、中央寄せにする */
+          max-width: 1024px; 
+          margin-left: auto;
+          margin-right: auto;
+
           display: flex;
           gap: 40px;
           align-items: flex-start;
@@ -303,7 +309,8 @@
       }
       .profile-table {
           width: 100%;
-          max-width: 800px;
+          /* max-widthは既に固定値で問題ありません */
+          max-width: 800px; 
           margin: 0 auto;
           border-collapse: collapse;
           box-shadow: 0 5px 15px rgba(0,0,0,.05);
@@ -336,6 +343,13 @@
           }
       }
       @media (max-width: 768px) {
+          /* ★修正: モバイルでは固定幅を解除し、表示崩れを防ぐ */
+          #philosophy .content-card,
+          #message .message-wrapper {
+              max-width: 100%; 
+          }
+          /* ★修正ここまで */
+          
           #page-title {
               font-size: 32px;
               margin-bottom: 40px;
