--- a/test.html
+++ b/test.html
@@ -180,8 +180,8 @@
 
       /* Philosophy Section */
       #philosophy .content-card {
-          /* ★修正: PCでの最大幅を固定し、中央寄せにする */
-          max-width: 860px; 
+          /* ★修正: 最大幅を 1024px に統一し中央寄せ */
+          max-width: 1024px; 
           margin-left: auto;
           margin-right: auto;
 
@@ -248,7 +248,7 @@
           padding: 80px 0;
       }
       #message .message-wrapper {
-          /* ★修正: PCでの最大幅を固定し、中央寄せにする */
+          /* ★修正: 最大幅を 1024px に統一し中央寄せ */
           max-width: 1024px; 
           margin-left: auto;
           margin-right: auto;
@@ -309,7 +309,6 @@
       }
       .profile-table {
           width: 100%;
-          /* max-widthは既に固定値で問題ありません */
           max-width: 800px; 
           margin: 0 auto;
           border-collapse: collapse;
