--- a/test.html
+++ b/test.html
@@ -174,8 +174,9 @@
           text-align: right;
           font-weight: 700;
           font-size: 1.05em;
-          color: #1976d2;
-          border-top: 1px solid #e5e7eb;
+          color: #0f172a; 
+          /* ★修正: 元のデザイン（privacypolicy.txtのsignatureクラス）に倣い、上線を追加 */
+          border-top: 1px solid #e5e7eb; 
           padding-top: 15px;
       }
 
