--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -21,90 +21,154 @@
   <!-- TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Google Analytics (baseから共通) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7K94Q6J64F"></script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-7K94Q6J64F');
+    gtag('config', 'G-ZHLJ5K19ZE');
   </script>
 
-  <!-- ページ固有スタイル -->
   <style>
-    main {
-      min-height: 40vh;
-      padding: 2em 0; /* 上下余白 */
-    }
-    #page-content .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-    .privacy-content {
-      line-height: 1.8;
-      color: #333;
-      font-size: 16px;
-    }
-    .privacy-content h1 {
-      margin: 0 0 40px;
-      padding-bottom: 10px;
-      font-size: 2.5rem;
-      font-weight: 700;
-      text-align: center;
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
+                   Arial, "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+      visibility: hidden; /* FOUC対策 */
+      background: #fff;
       color: #0f172a;
-      border-bottom: 2px solid #e0e0e0;
     }
-    .privacy-content h2 {
-      margin: 40px 0 16px;
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: #1976d2;
-      padding-bottom: 5px;
-      border-bottom: 1px dashed #bbdefb;
+    main {
+      min-height: 60vh;
     }
-    .privacy-content p {
-      margin: 0 0 24px;
-      text-align: justify;
+    /* フッター固定用 */
+    body.footer-fixed main {
+      padding-bottom: 60px; /* JSで自動調整 */
     }
-    .privacy-content ul {
-      margin: 0 0 24px 20px;
-      padding-left: 0;
-      list-style-type: none;
+
+    /* PC表示 */
+    .hamburger, .drawer {
+      display: none;
     }
-    .privacy-content ul li {
-      position: relative;
-      padding-left: 20px;
-      margin-bottom: 8px;
-    }
-    .privacy-content ul li::before {
-      content: '・';
-      color: #1976d2;
-      position: absolute;
-      left: 0;
-      top: 0;
-      font-weight: bold;
-    }
-    .signature {
-      margin-top: 50px;
-      padding-top: 15px;
-      text-align: right;
-      font-weight: 700;
-      font-size: 1.1rem;
-      color: #555;
-      border-top: 1px solid #e0e0e0;
+
+    /* --- SP表示 --- */
+    @media (max-width: 768px) {
+      .container { padding: 0 12px; }
+      :root { --container: 100%; }
+
+      /* ヘッダー：ナビ非表示 → ハンバーガー表示 */
+      .slot.nav { display: none; }
+      #site-header .hf-nav { display: none !important; }
+      .hamburger { display: block; margin-left: auto; cursor: pointer; }
+
+      /* ドロワーメニュー */
+      .drawer {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: -250px;
+        width: 250px;
+        height: 100%;
+        background: #fff;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.3);
+        transition: right 0.3s ease;
+        padding: 20px;
+        z-index: 1000;
+      }
+      .drawer.open { right: 0; }
+
+      /* フッター：ナビ非表示、コピーライトのみ */
+      #site-footer .hf-nav { display: none !important; }
     }
   </style>
 </head>
-<body id="page-body" style="visibility:hidden;">
-  <!-- ヘッダー（共通パーツ：hf.jsで動的読込） -->
+<body id="page-body">
   <header id="site-header"></header>
 
-  <!-- メイン -->
-  <main>
+  <main id="page-main">
+    <style>
+      .privacy-content {
+        line-height: 1.8;
+        color: #333;
+        font-size: 16px;
+      }
+      #page-title {
+        font-size: 42px;   /* PC表示用 */
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 60px;
+        font-weight: 900;
+        color: #1976d2;
+        letter-spacing: 2px;
+        position: relative;
+      }
+      #page-title::after {
+        content: '';
+        display: block;
+        width: 60px;
+        height: 3px;
+        background: #0f172a;
+        margin: 10px auto 0;
+        border-radius: 2px;
+      }
+      /* スマホ表示で縮小 */
+      @media (max-width: 768px) {
+        #page-title {
+          font-size: 26px;
+          letter-spacing: 1px;
+          margin-bottom: 40px;
+        }
+      }
+      .privacy-content h2 {
+        margin: 40px 0 16px;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #1976d2;
+        padding-bottom: 5px;
+        border-bottom: 1px dashed #bbdefb;
+      }
+      .privacy-content p {
+        margin: 0 0 24px;
+        text-align: justify;
+      }
+      .privacy-content ul {
+        margin: 0 0 24px 20px;
+        padding-left: 0;
+        list-style-type: none;
+      }
+      .privacy-content ul li {
+        position: relative;
+        padding-left: 20px;
+        margin-bottom: 8px;
+      }
+      .privacy-content ul li::before {
+        content: '・';
+        color: #1976d2;
+        position: absolute;
+        left: 0;
+        top: 0;
+        font-weight: bold;
+      }
+      .signature {
+        margin-top: 50px;
+        padding-top: 15px;
+        text-align: right;
+        font-weight: 700;
+        font-size: 1.1rem;
+        color: #555;
+        border-top: 1px solid #e0e0e0;
+      }
+      #page-content .container {
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+    </style>
+
     <div id="page-content">
       <div class="container privacy-content">
-        <h1>プライバシーポリシー</h1>
+        <h1 id="page-title">プライバシーポリシー</h1>
 
         <p>合同会社WaJu（以下「当社」）は、個人情報保護の重要性を深く認識し、以下の方針に基づき個人情報の適切な取り扱いと保護に努めます。</p>
 
@@ -135,10 +199,31 @@
     </div>
   </main>
 
-  <!-- フッター（共通パーツ：hf.jsで動的読込） -->
   <footer id="site-footer"></footer>
 
-  <!-- 共通JS（ヘッダー/フッター読み込み） -->
+  <!-- ヘッダー／フッター反映 -->
   <script type="module" src="hf.js"></script>
+
+  <!-- フッター高さに応じて余白を自動調整 -->
+  <script>
+    function adjustFooterPadding() {
+      const footer = document.getElementById("site-footer");
+      const main = document.querySelector("main");
+      if (document.body.classList.contains("footer-fixed") && footer && main) {
+        main.style.paddingBottom = footer.offsetHeight + "px";
+      } else if (main) {
+        main.style.paddingBottom = "0";
+      }
+    }
+    window.addEventListener("load", adjustFooterPadding);
+    window.addEventListener("resize", adjustFooterPadding);
+
+    function openDrawer() {
+      document.querySelector(".drawer").classList.add("open");
+    }
+    function closeDrawer() {
+      document.querySelector(".drawer").classList.remove("open");
+    }
+  </script>
 </body>
 </html>
